Изменен шрифт на Times New Roman

--- a/tests/tex/main.tex
+++ b/tests/tex/main.tex
@@ -4,7 +4,8 @@
 \setdefaultlanguage[babelshorthands=true]{russian}
 \setotherlanguage{english}
 
-\usepackage[default]{droidserif}
+% \usepackage[default]{droidserif}
+\setmainfont{Times New Roman}
 
 \usepackage[hidelinks]{hyperref}
 
